[package]
name = "dbs_bench"
version = "0.1.0"
authors = ["zhtluo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

ark-serialize = { version = "^0.2.0", default-features = false, features = [ "derive" ] }
ark-ff = { version="^0.2.0", default-features = false }
ark-ec = { version="^0.2.0", default-features = false }
ark-poly = { version="^0.2.0", default-features = false }

ark-bls12-381 = { version="^0.2.0", default-features = false, features = [ "curve" ] }